--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <form onsubmit="handleSubmit">
                 <label for="age">Date of Birth :</label>
                 <input type="date" name="age" id="age" />
-                <button type="submit" id="submit">Submit</button>
+                <div class="btn">
+                    <button type="submit" id="submit">Submit</button>
+                </div>            
             </form>
         </div>
         <p class="msg"></p>
